<resources>
    <string name="app_name">m6</string>
    <string name="kundicka">Cus kundicko</string>
    <string name="useless_button">Nothing happens and nothing matters</string>
    <string name="jezisek">JESUS TAKE THE WHEEL</string>
    <string name="popisUkolu">Zazpivej si tento interval kundicko:</string>
    <string name="randomInterval"></string>
    <string name="answerButtonString">Play the answer</string>
    <string name="repeatButtonString">Play again</string>
</resources>
